--- a/app-order/src/main/resources/bootstrap.yml
+++ b/app-order/src/main/resources/bootstrap.yml
@@ -1,11 +1,12 @@
 spring:
   application:
-    name: account
+    name: order
   profiles:
     active: dev
   cloud:
     config:
       name: config
+      fail-fast: true
       uri: http://localhost:10000/config
 
 eureka:
