--- a/app-product/src/main/resources/application.properties
+++ b/app-product/src/main/resources/application.properties
@@ -4,3 +4,5 @@ jdbc.url=jdbc:mysql://localhost:3306/micro-product?UseUnicode=true&amp;character
 jdbc.username=root
 jdbc.password=root
 info.app.version=@project.version@
+
+spring.cache.type=redis
